# smart_access

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: run_tests.sh  test_no_std.sh  test_std.sh
src/: at.rs  batch.rs  collections.rs  core_impls.rs  iter_mut.rs  lib.rs  macros.rs  stdlib_impls.rs  traversal.rs
src/at/: detach.rs  run_batch.rs  traversal.rs
src/at/traversal/: internal.rs
src/batch/: run_batch.rs
src/collections/: map.rs  set.rs  vec.rs
src/core_impls/: slice.rs
src/iter_mut/: multiref_impls.rs
src/stdlib_impls/: map.rs  set.rs  vec.rs
tests/: impl_cps.rs  no_std.rs
