[package]
name = "smart_access"
version = "0.6.0"
authors = ["arbrk1 <arbrk1@gmail.com>"]
edition = "2018"
description = 'A minimalistic "lazy bidirectional pointer" framework.'
readme = "README.md"
repository = "https://github.com/arbrk1/smart_access/"
license = "MIT"
keywords = ["data", "framework", "library", "optics", "lens"]
categories = ["data-structures", "rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiref = { version = "0.1", optional = true }

[features]
std = []
collections = ["std"]
batch_rt = ["std"]
batch_ct = []
batch = ["batch_ct", "batch_rt"]
detach = []
iter_mut = ["multiref", "std"]
default = ["collections", "batch", "detach", "iter_mut"]

[[test]]
name = "no_std"
test = false  # "cargo test --no-default-features" is needed for this test to compile
required-features = ["batch_ct"]

